tests/format/misc/errors/js/import-assertions/invalid-namespace-import.mjs
import module * as foo from "./module.wasm";
